fix twitter alignement

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,10 @@
     }
 }
 
+.twitter-follow-button {
+    margin-top: 9px;
+}
+
 
 
 .avatar {
